added arm docker for macbook dev

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -130,8 +130,8 @@ services:
 
   coordinator:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    image: apache/druid:32.0.0
+    image: ghcr.io/arm64-compat/apache/druid:31.0.1
+    # image: apache/druid:32.0.0
     container_name: coordinator
     volumes:
       - druid_shared:/opt/shared
@@ -150,8 +150,8 @@ services:
 
   broker:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    image: apache/druid:32.0.0
+    image: ghcr.io/arm64-compat/apache/druid:31.0.1
+    # image: apache/druid:32.0.0
     container_name: broker
     volumes:
       - broker_var:/opt/druid/var
@@ -170,8 +170,8 @@ services:
 
   historical:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    image: apache/druid:32.0.0
+    image: ghcr.io/arm64-compat/apache/druid:31.0.1
+    # image: apache/druid:32.0.0
     container_name: historical
     volumes:
       - druid_shared:/opt/shared
@@ -191,8 +191,8 @@ services:
 
   middlemanager:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    image: apache/druid:32.0.0
+    image: ghcr.io/arm64-compat/apache/druid:31.0.1
+    # image: apache/druid:32.0.0
     container_name: middlemanager
     volumes:
       - druid_shared:/opt/shared
@@ -213,8 +213,8 @@ services:
 
   router:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    image: apache/druid:32.0.0
+    image: ghcr.io/arm64-compat/apache/druid:31.0.1
+    # image: apache/druid:32.0.0
     container_name: router
     volumes:
       - router_var:/opt/druid/var
