made pyflink run through docker, connected to kafka, now the fun begins

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -280,6 +280,7 @@ services:
         FLINK_PROPERTIES=
         jobmanager.rpc.address: flink-jobmanager
         taskmanager.numberOfTaskSlots: 2
+        classloader.resolve-order: parent-first
     networks:
       - ridehail_metrics
 networks:
