created an updated linux branch

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -130,8 +130,11 @@ services:
 
   coordinator:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    # image: apache/druid:32.0.0
+    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
+
+    # Use this for Linux/Windows
+    image: apache/druid:32.0.0
+
     container_name: coordinator
     volumes:
       - druid_shared:/opt/shared
@@ -150,8 +153,10 @@ services:
 
   broker:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    # image: apache/druid:32.0.0
+    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
+
+    # Use this for Linux/Windows
+    image: apache/druid:32.0.0
     container_name: broker
     volumes:
       - broker_var:/opt/druid/var
@@ -170,8 +175,10 @@ services:
 
   historical:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    # image: apache/druid:32.0.0
+    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
+
+    # Use this for Linux/Windows
+    image: apache/druid:32.0.0
     container_name: historical
     volumes:
       - druid_shared:/opt/shared
@@ -191,8 +198,10 @@ services:
 
   middlemanager:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    # image: apache/druid:32.0.0
+    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
+
+    # Use this for Linux/Windows
+    image: apache/druid:32.0.0
     container_name: middlemanager
     volumes:
       - druid_shared:/opt/shared
@@ -213,8 +222,10 @@ services:
 
   router:
     # In case you are using Apple Silicon ARM chips use the below image for Druid
-    image: ghcr.io/arm64-compat/apache/druid:31.0.1
-    # image: apache/druid:32.0.0
+    # image: ghcr.io/arm64-compat/apache/druid:31.0.1
+
+    # Use this for Linux/Windows
+    image: apache/druid:32.0.0
     container_name: router
     volumes:
       - router_var:/opt/druid/var
@@ -245,7 +256,7 @@ services:
       - POSTGRES_DB=ridehail_data_warehouse
     networks:
       - ridehail_metrics
-  
+
   #Apache Flink
   flink-jobmanager:
     build:
